# AI-Saller-Alina-v2-new

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260310_0001_initial_schema.py  20260311_0002_rebrand_alina_catalog.py  20260312_0003_lead_state_followup.py
app/: main.py
app/ai/: analyzer.py  contracts.py  openai_client.py  prompt_builder.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: leads.py  services.py  simulate.py
app/core/: config.py  enums.py  logging.py
app/db/: session.py
app/db/models/: __init__.py  ai_run.py  common.py  lead.py  message.py  service.py
app/integrations/: telegram_bot.py
app/repositories/: ai_runs.py  leads.py  messages.py  services.py
app/schemas/: lead.py  message.py  service.py  simulate.py
app/services/: business_case.py  catalog_service.py  company_knowledge.py  contact_extractor.py  follow_up_service.py  lead_service.py  message_processor.py  schedule.py  stage_policy.py
app/workers/: telegram_polling.py
docs/: ARCHITECTURE_AI_SALES_AGENT_V2.md
knowledge/company/: README.md  alina_sales_agent_value.md  implementation_scope.md  product_overview.md
scripts/: simulate_dialogs.py
tests/: conftest.py
tests/api/: test_leads_api.py  test_simulate_api.py
tests/unit/: test_ai_analyzer.py  test_booking_and_admin_notify.py  test_follow_up_service.py  test_message_processor.py  test_schedule.py  test_start_scenario.py  test_stop_and_reactivation.py  test_telegram_delivery_retry.py
